@@ -1,18 +1,26 @@
-pipelineJob('AutomatedTests/ep426I-unit-cen64-gtk3-java19'){
+def config = new groovy.json.JsonSlurper().parseText(readFileFromWorkspace('JenkinsJobs/JobDSL.json'))
+def STREAMS = config.Streams
 
-  logRotator {
-    numToKeep(5)
-  }
+for (STREAM in STREAMS){
+  def BRANCH = config.Branches.STREAM
+  def MAJOR = STREAM.split('\\.')[0]
+  def MINOR = STREAM.split('\\.')[1]
 
-  parameters {
-    stringParam('buildId', null, null)
-    stringParam('javaDownload', 'https://download.java.net/java/GA/jdk19/877d6127e982470ba2a7faa31cc93d04/36/GPL/openjdk-19_linux-x64_bin.tar.gz', null)
-  }
+  pipelineJob('AutomatedTests/ep' + MAJOR + MINOR + 'I-unit-cen64-gtk3-java11'){
 
-  definition {
-    cps {
-      sandbox()
-      script('''
+    logRotator {
+      numToKeep(5)
+    }
+
+    parameters {
+      stringParam('buildId', null, null)
+      stringParam('javaDownload', 'https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz', null)
+    }
+
+    definition {
+      cps {
+        sandbox()
+        script('''
 pipeline {
 	options {
 		timeout(time: 600, unit: 'MINUTES')
@@ -21,7 +29,7 @@ pipeline {
 	}
   agent {
     kubernetes {
-      label 'centos-unitpod19'
+      label 'centos-unitpodJava11'
       defaultContainer 'custom'
       yaml """
 apiVersion: v1
@@ -30,19 +38,19 @@ spec:
   containers:
   - name: "jnlp"
     resources:
-      limits:
-        memory: "2048Mi"
-        cpu: "2000m"
       requests:
-        memory: "512Mi"
-        cpu: "1000m"
+        cpu: "100m"
+        memory: "1024Mi"
+      limits:
+        cpu: "100m"
+        memory: "1024Mi"
   - name: "custom"
     image: "eclipse/platformreleng-centos-gtk3-metacity:8"
     imagePullPolicy: "Always"
     resources:
       limits:
-        memory: "4096Mi"
-        cpu: "1000m"
+        memory: "6144Mi"
+        cpu: "2000m"
       requests:
         memory: "512Mi"
         cpu: "1000m"
@@ -81,7 +89,7 @@ spec:
           steps {
               container ('custom'){
                   wrap([$class: 'Xvnc', takeScreenshot: false, useXauthority: true]) {
-                      withEnv(["JAVA_HOME_NEW=${ tool 'openjdk-jdk18-latest' }"]) {
+                      withEnv(["JAVA_HOME_NEW=${ tool 'adoptopenjdk-hotspot-latest-lts' }"]) {
                           withAnt(installation: 'apache-ant-latest') {
                               sh \'\'\'#!/bin/bash -x
                                 
@@ -106,6 +114,7 @@ spec:
                                 mkdir -p ${WORKSPACE}/tmp
                                 
                                 wget -O ${WORKSPACE}/getEBuilder.xml --no-verbose --no-check-certificate https://download.eclipse.org/eclipse/relengScripts/production/testScripts/hudsonBootstrap/getEBuilder.xml 2>&1
+                                cat ${WORKSPACE}/getEBuilder.xml
                                 wget -O ${WORKSPACE}/buildproperties.shsource --no-check-certificate https://download.eclipse.org/eclipse/downloads/drops4/${buildId}/buildproperties.shsource
                                 cat ${WORKSPACE}/buildproperties.shsource
                                 source ${WORKSPACE}/buildproperties.shsource
@@ -120,13 +129,13 @@ spec:
                                 popd
                                 set +x
                                 
-                                export PATH=${JAVA_HOME_NEW}/bin:${ANT_HOME}/bin:${PATH}                                
+                                export PATH=${JAVA_HOME_NEW}/bin:${ANT_HOME}/bin:${PATH} 
                                 
                                 echo JAVA_HOME: $JAVA_HOME
                                 export JAVA_HOME=$JAVA_HOME_NEW
                                 echo ANT_HOME: $ANT_HOME
                                 echo PATH: $PATH
-                                export ANT_OPTS="${ANT_OPTS} -Djava.io.tmpdir=${WORKSPACE}/tmp -Djava.security.manager=allow"
+                                export ANT_OPTS="${ANT_OPTS} -Djava.io.tmpdir=${WORKSPACE}/tmp"
                                 
                                 env 1>envVars.txt 2>&1
                                 ant -diagnostics 1>antDiagnostics.txt 2>&1
@@ -145,16 +154,16 @@ spec:
                           }
                       }
                   }
+                  junit keepLongStdio: true, testResults: '**/eclipse-testing/results/xml/*.xml'
               }
               archiveArtifacts '**/eclipse-testing/results/**, **/eclipse-testing/directorLogs/**, *.properties, *.txt'
-              junit keepLongStdio: true, testResults: '**/eclipse-testing/results/xml/*.xml'
               build job: 'Releng/ep-collectResults', parameters: [string(name: 'triggeringJob', value: "${JOB_BASE_NAME}"), string(name: 'buildURL', value: "${BUILD_URL}"), string(name: 'buildID', value: "${params.buildId}")], wait: false
           }
       }
   }
 }
-      ''')
+        ''')
+      }
     }
   }
 }
-
